# Curso-Python

./: pyproject.toml
src/curso/: aula_01.py  aula_02.py  aula_03.py  aula_04.py  aula_05.py  aula_06.py  aula_07.py  aula_08.py  aula_09.py  aula_10.py  aula_11.py
src/modulos_aula11/: math_utils.py  user_service.py
